Squashed commit of the following:
commit ee71847b9c907f4ef3fe2093dc31643136436732
Author: Fadin Vladislav <sad_456@ngs.ru>
Date:   Wed Mar 15 22:17:07 2023 +0700

    Add adding to database

commit dd21f4063926c82820a5ece7610a95c492cae402
Author: Fadin Vladislav <sad_456@ngs.ru>
Date:   Wed Mar 15 21:31:55 2023 +0700

    Make up add new car screen

commit f1af8d70e6de7641f444357531aeb9b30cc04173
Author: Fadin Vladislav <sad_456@ngs.ru>
Date:   Wed Mar 15 20:35:33 2023 +0700

    Add navigation to this screen

commit a59e98e5ef57538740a9d234b2caa48b93867486
Author: Fadin Vladislav <sad_456@ngs.ru>
Date:   Wed Mar 15 20:12:13 2023 +0700

    Add AddNewCarScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,7 @@
     </string>
     <string name="home_title">Главная</string>
     <string name="search_placeholder">Поиск</string>
+    <string name="placeholder_input_name">Введите название</string>
+    <string name="placeholder_input_year">Введите год выпуска</string>
+    <string name="placeholder_input_engine_capacity">Введите объём двигателя</string>
 </resources>
